add check-in function

--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -65,13 +65,13 @@
                 <li class='@("on".when(nav == "jie"))'><a href="/jie" >美食街</a></li>
                 <li class='@("on".when(nav == "miss"))'>  <a href="/miss" >生活馆</a> </li>
             </ul>
-            <div class="signIn fr">
-                <a class="btn-signIn" href="@controllers.users.routes.Users.signIn" rel="signIn">签到</a>
-                <div id="checkin_intro" class="dropdown signIn-dropdown" >
+            <div class="checkIn fr">
+                <a class="btn-checkIn" href="@controllers.users.routes.Users.checkIn">签到</a>
+                <div id="checkin_intro" class="dropdown checkIn-dropdown" >
 
                     集分宝：<b class="checkin_days">0</b>&nbsp;个<br/>
 
-                    <a href="@controllers.users.routes.Users.signIn" target="_blank" class="signIn-prize">签到有奖</a>
+                    <a href="@controllers.users.routes.Users.checkIn" target="_blank" class="checkIn-prize">签到有奖</a>
                   <p>
                       签到送集分宝，每次1-20个集分宝，随机赠送
                   </p>
