--- a/app/views/pages/find.scala.html
+++ b/app/views/pages/find.scala.html
@@ -39,7 +39,7 @@ title =  "发现喜欢_"+ cate +"_"+tag +"_食美特，爱美食爱生活"
         <div class="goods small @if((i+1)%4==0){last} ">
             <div class="goods-pic">
                 <a class="pic-link" href="@controllers.routes.Goods.view(goodsId)" title="@goodsName" target="_blank">
-                    <img src="/assets/ui/blank.gif"  data-original='@(goodsPic+"_210x210.jpg")' width="210" height="210" title="@goodsName" alt="@goodsName" />
+                    <img src='@(goodsPic+"_210x210.jpg")' width="210" height="210" title="@goodsName" alt="@goodsName" />
                 </a>
                 <a  class="ilike-m" href="javascript:;" data-proimgsrc="@goodsPic" data-prourl="@controllers.routes.Goods.view(goodsId)" data-proname="@goodsName" data-type="0" data-proid="@goodsId">
                     <i></i>
