--- a/app/views/goods/view.scala.html
+++ b/app/views/goods/view.scala.html
@@ -107,18 +107,10 @@ description = goods.intro
 
                  </div>
                  <div class="operate">
-                     <div class="clearfix">
+
                          <a rel="nofollow" class="info-wrong" href="javascript:;" id="J_JiuCuo" data-proid="488">信息有误？</a>
-                         <div class="share fr">
-                             <span class="fl gc6">&nbsp;&nbsp;&nbsp;&nbsp;向好友推荐：</span>
-                             <a  class="s-sina" href="javascript:void((function(){var title=encodeURIComponent('在食美特发现这个宝贝，很喜欢，分享给大家 : @goods.name ');var link='@controllers.routes.Goods.view(goods.id.get)';var pic='@goods.pic';window.open('http://service.t.sina.com.cn/share/share.php?appkey=1464940004&title='+title+'&pic='+pic+'&url='+link);})())" alt="分享到新浪微博" title="分享到新浪微博"></a>
-                             <a  class="s-qzone" href="javascript:void((function(){var title=encodeURIComponent('在食美特发现这个宝贝，很喜欢，分享给大家 : @goods.name ');var link='@controllers.routes.Goods.view(goods.id.get)';window.open('http://sns.qzone.qq.com/cgi-bin/qzshare/cgi_qzshare_onekey?url='+link);})())" alt="分享到QQ空间" title="分享到QQ空间"></a>
-                             <a  class="s-tencent" href="javascript:void((function(){var title=encodeURIComponent('在食美特发现这个宝贝，很喜欢，分享给大家 : @goods.name ');var link='@controllers.routes.Goods.view(goods.id.get)';var pic='@goods.pic';window.open('http://v.t.qq.com/share/share.php?appkey=100344510&url='+link+'&title='+title+'&pic='+pic+'&site='+link);})())" alt="分享到腾讯微博" title="分享到腾讯微博"></a>
-                             <a  class="s-douban" href="javascript:void((function(){var title=encodeURIComponent('在食美特发现这个宝贝，很喜欢，分享给大家 : @goods.name ');var link='@controllers.routes.Goods.view(goods.id.get)';window.open('http://www.douban.com/recommend/?url='+link+'&title='+title);})())" alt="分享到豆瓣" title="分享到豆瓣"></a>
-                             <a  class="s-renren" href="javascript:void((function(){var title=encodeURIComponent('在食美特发现这个宝贝，很喜欢，分享给大家 : @goods.name ');var link='@controllers.routes.Goods.view(goods.id.get)';window.open('http://share.renren.com/share/buttonshare.do?link='+link+'&title='+title);})())" alt="分享到人人网" title="分享到人人网"></a>
-                             <a  class="s-163" href="javascript:void((function(){var title=encodeURIComponent('在食美特发现这个宝贝，很喜欢，分享给大家 : @goods.name ');var link='@controllers.routes.Goods.view(goods.id.get)';var pic='@goods.pic';window.open('http://t.163.com/article/user/checkLogin.do?link='+link+'&source=食美特&info='+title+link+'&images='+pic+'&togImg=true');})());" alt="分享到网易微博" title="分享到网易微博"></a>
-                         </div>
-                     </div>
+                        <a class="btn-share" href="javascript:;" data-sharetxt="我在食美特发现了这个宝贝，我很喜欢，分享给大家 :@goods.name  " data-sharelink="@controllers.routes.Goods.view(goods.id.get)" data-sharepic='@(goods.pic+"_310x310.jpg")' title="分享">分享</a>
+
                  </div>
              </div>
 
