--- a/app/views/users/checkIn.scala.html
+++ b/app/views/users/checkIn.scala.html
@@ -5,10 +5,119 @@ title =  "签到_食美特，爱美食爱生活"
 )(css="/assets/css/template/user.checkIn.css") {
 
 <div class="container">
+    <div class="checkIn-adv mb20">
+        <a> <img src="/assets/ui/bottom-flash-3.jpg"> </a>
+    </div>
 
+    <div class="checkIn-box clearfix">
+        <!-- 签到信息展示 -->
+        <div class="checkIn-intro mb15">
+            你已连续签到xxxx days,恭喜你获得 xxxx 礼品
+        </div>
+
+
+            <!-- 签到时间展示 -->
+            <div class="checkIn-calendar">
+
+                <div id="calendar">
+
+                    <div class="calendar-info clearfix">
+                        <h3 class="calendar-title fl">食美特签到时间表:</h3>
+                        <div class="calendar-month fl">
+                            <a class="nav-prev"></a>
+                            <h3 class="current-month">June 2009</h3>
+                            <a class="nav-next"></a>
+                        </div>
+
+                    </div>
+
+                  <div class="clear"></div>
+                    <table class="calendar-month " id="calendar-month5 " cellspacing="0">
+                        <tbody>
+                        <tr>
+                            <th class="weekday">星期一</th>
+                            <th class="weekday">星期二</th>
+                            <th class="weekday">星期三</th>
+                            <th class="weekday">星期四</th>
+                            <th class="weekday">星期五</th>
+                            <th class="weekday">星期六</th>
+                            <th class="weekday">星期天</th>
+                        </tr>
+                        <tr>
+                            <td class="other-month"><span class="day">31</span></td>
+                            <td class="current-month day1"><span class="day">1</span></td>
+                            <td class="current-month day2"><span class="day">2</span></td>
+                            <td class="current-month day3"><span class="day">3</span></td>
+                            <td class="current-month day4"><span class="day">4</span></td>
+                            <td class="current-month day5"><span class="day">5</span></td>
+                            <td class="current-month day6"><span class="day">6</span></td>
+                        </tr>
+                        <tr>
+                            <td class="current-month day7"><span class="day">7</span></td>
+                            <td class="current-month day8"><span class="day">8</span></td>
+                            <td class="current-month day9"><span class="day">9</span></td>
+                            <td class="current-month day10"><span class="day">10</span></td>
+                            <td class="current-month day11"><span class="day">11</span></td>
+                            <td class="current-month day12"><span class="day">12</span></td>
+                            <td class="current-month day13"><span class="day">13</span></td>
+                        </tr>
+                        <tr>
+                            <td class="current-month day14"><span class="day">14</span></td>
+                            <td class="current-month day15"><span class="day">15</span></td>
+                            <td class="current-month day16"><span class="day">16</span></td>
+                            <td class="current-month day17"><span class="day">17</span></td>
+                            <td class="current-month day18"><span class="day">18</span></td>
+                            <td class="current-month day19"><span class="day">19</span></td>
+                            <td class="current-month day20"><span class="day">20</span></td>
+                        </tr>
+                        <tr>
+                            <td class="current-month day21"><span class="day">21</span></td>
+                            <td class="current-month day22"><span class="day">22</span></td>
+                            <td class="current-month day23"><span class="day">23</span></td>
+                            <td class="current-month day24"><span class="day">24</span></td>
+                            <td class="current-month day25"><span class="day">25</span></td>
+                            <td class="current-month day26"><span class="day">26</span></td>
+                            <td class="current-month day27"><span class="day">27</span></td>
+                        </tr>
+                        <tr>
+                            <td class="current-month day28"><span class="day">28</span></td>
+                            <td class="current-month day29"><span class="day">29</span></td>
+                            <td class="current-month day30"><span class="day">30</span></td>
+                            <td class="other-month"><span class="day">1</span></td>
+                            <td class="other-month"><span class="day">2</span></td>
+                            <td class="other-month"><span class="day">3</span></td>
+                            <td class="other-month"><span class="day">4</span></td>
+                        </tr>
+                        <tr>
+                            <td class="other-month"><span class="day">5</span></td>
+                            <td class="other-month"><span class="day">6</span></td>
+                            <td class="other-month"><span class="day">7</span></td>
+                            <td class="other-month"><span class="day">8</span></td>
+                            <td class="other-month"><span class="day">9</span></td>
+                            <td class="other-month"><span class="day">10</span></td>
+                            <td class="other-month"><span class="day">11</span></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <!-- 规则说明 -->
+            <div class="checkIn-rules">
+                 <h3> 签到规则说明</h3>
+                  <ul>
+                      <li>xxxxxx</li>
+                      <li>xxxxxxxxfdfd</li>
+                      <li>xxxxxxxdfdfdfdfd</li>
+                      <li>xxxxxsdfadfdfdfdfdfx</li>
+                  </ul>
+
+            </div>
+
+
+    </div>
 </div>
 
-        }{
+}{
 <script type="text/javascript">
     seajs.use('app/init', function (init) {
         init.load("app/user/user.checkIn")
