adjust info pages

--- a/app/views/infos/agreement.scala.html
+++ b/app/views/infos/agreement.scala.html
@@ -2,10 +2,10 @@
 @views.html.template(
 user,
 title = "服务条款_食美特，爱美食爱生活"
-)(css="/assets/css/template/user.regLogin.css") {
+)(css="/assets/css/template/infos.css") {
 
     <div class="container" id="regLogin">
-        <div class="content">
+        <div class="common">
             <div class="agreement-box">
                 <h2>smeite.com网络服务协议</h2>
                 <ul>
