--- a/app/views/infos/friends.scala.html
+++ b/app/views/infos/friends.scala.html
@@ -2,7 +2,7 @@
 @views.html.template(
 user,
 title = "友情链接_食美特，爱美食爱生活"
-)(css="/assets/css/template/user.regLogin.css") {
+)(css="/assets/css/template/infos.css") {
 
 <div class="container">
 <div class="friends">
