--- a/app/views/infos/contactUs.scala.html
+++ b/app/views/infos/contactUs.scala.html
@@ -2,7 +2,7 @@
 @views.html.template(
 user,
 title = "联系我们_食美特，爱美食爱生活"
-)(css="/assets/css/template/user.regLogin.css") {
+)(css="/assets/css/template/infos.css") {
 
 <div class="container">
     <div class="common">
