add some checkin functions

--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -65,21 +65,7 @@
                 <li class='@("on".when(nav == "jie"))'><a href="/jie" >美食街</a></li>
                 <li class='@("on".when(nav == "miss"))'>  <a href="/miss" >生活馆</a> </li>
             </ul>
-            <div class="checkIn fr">
-                <a class="btn-checkIn" href="javascript:;" rel="checkIn">签到</a>
-                <div id="checkin_intro" class="dropdown checkIn-dropdown" >
-
-                    连签：<b class="checkin_days" id="J_checkInDays">0</b>&nbsp;个<br/>
-                    集分宝：<b id="J_jifenbao">0</b>&nbsp;分<br/>
-
-                  <p>
-                      签到送集分宝，每次1-20个集分宝，随机赠送
-                  </p>
-                    <a href="" target="_blank" class="invite">邀请可获更多集分宝</a>
-
-                </div>
-            </div>
-
+                <a class="btn-checkIn fr" href="javascript:;" rel="checkIn">签到</a>
             <!--分享宝贝-->
             <div class="shareIt fr">
                 <a  class="btn-sg" href="javascript:;">分享好东西<span class="arrow-dn"></span></a>
