--- a/public/assets/css/global/global.css
+++ b/public/assets/css/global/global.css
@@ -970,7 +970,71 @@ input:-moz-placeholder { font-size:12px; }
 #J_newGiftDialog .gift_handle:hover i { background-position:0 -92px; }
 #J_newGiftDialog .gift_handle:active i { background-position:0 -191px; }
 
-#J_newGiftDialog .gift_handle_result{
+
+#J_checkInDialog .checkIn_handle_result{
+    margin: 20px auto;
+    font-size: 14px;
+}
+
+#J_checkInDialog {
+    width: 500px;
+}
+#J_checkInDialog .hd h3 {
+    color: #E26;
+    font-size: 16px;
+    font-weight: bolder;
+}
+#J_checkInDialog .checkIn{
+    margin: 30px auto;
+    position: relative;
+}
+#J_checkInDialog .checkIn_area{
+    position: relative;
+    margin: 10px auto;
+    background: url(/assets/ui/new_gift_bg.png) no-repeat 0 0 transparent;
+    width: 170px;
+    height: 107px;
+    overflow: hidden;
+}
+#J_checkInDialog .checkIn_bg,#J_checkInDialog .checkIn_roll{
+    padding: 7px 8px;
+}
+#J_checkInDialog .checkIn_left_value{
+    position: absolute;
+    left: 28px;
+    top: 20px;
+    font-size: 60px;
+}
+#J_checkInDialog .checkIn_right_value{
+    position: absolute;
+    right: 28px;
+    top: 20px;
+    font-size: 60px;
+}
+#J_checkInDialog .hide{
+    display: none;
+}
+#J_checkInDialog .show{
+    display:block;
+}
+#J_checkInDialog .checkIn_giveUp{
+    float: right;
+}
+#J_checkInDialog a{
+    color:#E26;
+}
+#J_checkInDialog a:hover{
+    color: #ff7f00;
+    text-decoration: underline;
+}
+#J_checkInDialog .checkIn_handle { position:relative;margin:50px auto 10px;padding:0 15px 0 40px;width:65px;height:36px;line-height:36px;outline:none;color:#fff;text-align:left;background:#ee2266 url(images/like-btn.png) no-repeat right -45px;-moz-box-shadow:0 0 0 4px rgba(255, 161, 13, 0.6);-webkit-box-shadow:0 0 0 4px rgba(255, 161, 13, 0.6);box-shadow:0 0 0 4px rgba(255, 161, 13, 0.6);-moz-border-radius:3px;-webkit-border-radius:3px;border-radius:3px; }
+#J_checkInDialog .checkIn_handle:hover { background-position:right -140px;text-decoration:none; }
+#J_checkInDialog .checkIn_handle:active { background-position:right -240px;text-decoration:none; }
+#J_checkInDialog .checkIn_handle i { position:relative;top:0;left:0;width:40px;height:36px;background:url(images/like-btn.png) no-repeat 0 0; }
+#J_checkInDialog .checkIn_handle:hover i { background-position:0 -92px; }
+#J_checkInDialog .checkIn_handle:active i { background-position:0 -191px; }
+
+#J_checkInDialog .checkIn_handle_result{
     margin: 20px auto;
     font-size: 14px;
 }
@@ -2412,12 +2476,15 @@ body .redactor_toolbar li a.redactor_btn_alignment	 		{ background-position: -62
 }
 
 
-#nav a.btn-checkIn:hover {text-decoration:none;background:#92b03b url(images/checkIn-status.png) 07px -23px no-repeat;transition:bottom 0.3s;-webkit-transition:bottom 0.3s;-moz-transition:bottom 0.3s;-o-transition:bottom 0.3s;_background:#92b03b url(images/checkIn-status-ie6.png) 07px -23px no-repeat; }
-
-#nav a.checked {color:#999;display:block;margin:8px 0 0 5px;height:24px;overflow:hidden;line-height:24px;padding:0 12px 0 26px;border:1px solid #dcdcdc;border-top:none;border-left:none;text-decoration:none;background:#fff url(images/checkIn-status.png) 07px -54px no-repeat;_background:#92b03b url(images/checkIn-status-ie6.png) 07px -54px no-repeat; }
-#nav a.checked:hover{background:#fff url(images/checkIn-status.png) 07px -54px no-repeat;_background:#92b03b url(images/checkIn-status-ie6.png) 07px -54px no-repeat; }
-
-
+#checkin_intro{line-height:20px;color:#666;padding:10px;position:absolute;z-index:9998;width:110px;background:#FFF;top:38px;right:0;border:1px solid #e4e4e4;}
+#checkin_intro b{color:#F32A6B;}
+#checkin_intro  img{padding:5px 0;}
+#checkin_intro p{color:#999;line-height:18px;border-top:1px solid #f3f3f3;padding-top:5px;margin-top:5px;}
+#checkin_intro p a{color:#5AD;text-decoration: none;}
+#checkin_intro p a:hover{color:#5AD;text-decoration:underline;}
+#checkin_intro .checkin_on{color:#fff;background-color:#88b735;height:18px;line-height:18px;}
+#checkin_intro .checkin_off{color:#333;background-color:#dedede;height:18px;line-height:18px;}
+#checkin_intro .checkin_days{color:#9dc62c;font-size:30px;}
 /* 签到  end*/
 
 
