--- a/public/assets/css/global/global.css
+++ b/public/assets/css/global/global.css
@@ -2458,25 +2458,13 @@ body .redactor_toolbar li a.redactor_btn_alignment	 		{ background-position: -62
 }
 
 /* channel end */
-#nav a.btn-checkIn {
-    display: block;
-    margin: 8px 0 0 5px;
-    height: 24px;
-    width: 24px;
-    overflow: hidden;
-    line-height: 24px;
-    padding: 0 12px 0 26px;
-    color: white;
-    border: 1px solid gainsboro;
-    border-top: none;
-    border-left: none;
-    text-decoration: none;
-    background: #92B03B url(images/checkIn-status.png) 7px 2px no-repeat;
-    _background: #92b03b url(images/checkIn-status-ie6.png) 7px 2px no-repeat;
-}
+#nav a.btn-checkIn { display:block;margin:8px 0 0 5px;height:24px;overflow:hidden;line-height:24px;padding:0 12px 0 26px;color:#fff;background:#92b03b url(images/checkIn-status.png) 07px 2px no-repeat;_background:#92b03b url(images/checkIn-status-ie6.png) 07px 2px no-repeat; }
+#nav a.btn-checkIn:hover {text-decoration:none;background:#92b03b url(images/checkIn-status.png) 07px -23px no-repeat;transition:bottom 0.3s;-webkit-transition:bottom 0.3s;-moz-transition:bottom 0.3s;-o-transition:bottom 0.3s;_background:#92b03b url(images/checkIn-status-ie6.png) 07px -23px no-repeat; }
+#nav a.checked {color:#999;display:block;margin:8px 0 0 5px;height:24px;overflow:hidden;line-height:24px;padding:0 12px 0 26px;text-decoration:none;background:#fff url(images/checkIn-status.png) 07px -54px no-repeat;_background:#92b03b url(images/checkIn-status-ie6.png) 07px -54px no-repeat; }
+#nav a.checked:hover{background:#fff url(images/checkIn-status.png) 07px -54px no-repeat;_background:#92b03b url(images/checkIn-status-ie6.png) 7px -54px no-repeat; }
 
 
-#checkin_intro{line-height:20px;color:#666;padding:10px;position:absolute;z-index:9998;width:110px;background:#FFF;top:38px;right:0;border:1px solid #e4e4e4;}
+#checkin_intro{width:130px;line-height:20px;color:#666;padding:10px;position:absolute;z-index:9998;background:#FFF;top:38px;right:0;border:1px solid #e4e4e4;}
 #checkin_intro b{color:#F32A6B;}
 #checkin_intro  img{padding:5px 0;}
 #checkin_intro p{color:#999;line-height:18px;border-top:1px solid #f3f3f3;padding-top:5px;margin-top:5px;}
