checkIn function all done

--- a/app/views/admin/template.scala.html
+++ b/app/views/admin/template.scala.html
@@ -96,6 +96,7 @@
                     <ul>
                         <li><a href='@controllers.admin.routes.Adverts.channel("index")'>首页频道管理</a></li>
                         <li><a href='@controllers.admin.routes.Adverts.channel("tejia")'>天天特价管理</a></li>
+                        <li><a href='@controllers.admin.routes.Adverts.channel("checkIn")'>签到推荐管理</a></li>
                         <li><a href='@controllers.admin.routes.Adverts.channel("forum")'>讨论吧频道管理</a></li>
                     </ul>
                 </li>
