--- a/app/views/ugc/api/gotoTaobao.scala.html
+++ b/app/views/ugc/api/gotoTaobao.scala.html
@@ -1,4 +1,4 @@
-@(numIid:Long,uid:Long,goodsId:Long,rate:Int,detailUrl:String)
+@(numIid:Long,uid:Long,goodsId:Long,rate:Int)
 <!DOCTYPE html>
 <html>
 <head>
@@ -32,7 +32,7 @@
 
 <script type="text/javascript">
 
-    var sellUrl="@detailUrl";
+    var sellUrl="http://s.click.taobao.com/t?e=zGU34CA7K%2BPkqB05%2Bm7rfGGjlY60oHcc7bkKOQifp0MmYIa5dG30TtdmDilVj1cEloDVmgb8FEigyZPlCHxc61jiCMjJOUeMRrvllGVI4ZakNDI4Pw%3D%3D";
     var ajaxData={
         'uid':'@uid',
         'goodsId':'@goodsId',
