--- a/app/views/admin/votes/edit.scala.html
+++ b/app/views/admin/votes/edit.scala.html
@@ -1,12 +1,12 @@
-@(manager:models.admin.Manager)
-@views.html.admin.template(manager,"tag") {
+@(manager:models.admin.Manager,form: Form[controllers.admin.VoteFormData],msg:String="")
+@views.html.admin.template(manager,"vote") {
     <div id="content-header">
-        <h1>标签管理</h1>
+        <h1>调查投票管理</h1>
     </div>
     <div id="breadcrumb">
         <a href="#" title="Go to Home" class="tip-bottom"><i class="icon-home"></i> Home</a>
-        <a href="#" class="current">标签组管理</a>
-        <a href="#" class="current">编辑标签</a>
+        <a href="#" class="current">调查投票管理</a>
+        <a href="#" class="current">编辑投票</a>
     </div>
 
     <div class="container-fluid">
@@ -17,19 +17,131 @@
         <span class="icon">
             <i class="icon-pencil"></i>
         </span>
-        <h5>编辑标签</h5>
+        <h5>编辑投票</h5>
     </div>
     <div class="widget-content nopadding">
-        <form class=" form-horizontal" id="J_tagForm"  method="post" action="@controllers.admin.routes.Votes.save">
+        <form class=" form-horizontal" id="J_tForm"  method="post" action="@controllers.admin.routes.Votes.save">
+            <input type="hidden" name="id" value='@form("id").value'>
 
+            @form.globalError.map { error =>
+            <div class="error-row" style="display:block">
+                <p class="error"> @error.message</p>
+            </div>
+            }
+            @if(msg!=""){
+            <div class="error-row" style="display:block">
+                <p class="error"> @msg</p>
+            </div>
 
+            }
 
+            <div class="control-group">
+                <label class="control-label" >类型</label>
+                <div class="controls">
+                    <input type="radio"  name="voteType" value="0" @if(form("voteType").value.getOrElse(" ")== "0"){ checked="true"}> 商品
+                    <input type="radio"   name="voteType" value="1" @if(form("voteType").value.getOrElse("") == "1"){ checked="true"} > 话题
+                </div>
+            </div>
+            <div class="control-group">
+                <label class="control-label" >有效状态</label>
+                <div class="controls">
+                    <input type="radio" name="validState" value="0" @if(form("validState").value.getOrElse(" ")== "0"){ checked="true"}> 未进行
+                    <input type="radio"   name="validState" value="1" @if(form("validState").value.getOrElse("") == "1"){ checked="true"} > 正在进行
+                    <input type="radio"   name="validState" value="2" @if(form("validState").value.getOrElse("") == "2"){ checked="true"} > 已结束
+                </div>
+            </div>
+            <div class="control-group">
+                <label class="control-label">第三方ID</label>
+                <div class="controls">
+                    <input type="text" class="input-xlarge"  name="thirdId" value='@form("thirdId").value' placeholder="sort num" required="required">
+                </div>
+            </div>
+
+            <div class="control-group">
+                <label class="control-label" >简介</label>
+                <div class="controls">
+                    <input type="text" class="input-xlarge"  name="intro" value='@form("intro").value' placeholder="intro" required="required">
+                </div>
+            </div>
+            <div class="control-group">
+                <label class="control-label" >图片</label>
+                <div class="controls">
+                    <input type="hidden" name="pic" id="pic" value='@form("pic").value'>
+                    <img id="picShow" src='@form("pic").value'>
+
+                    <input id="picUpload" class="picUpload" type="button" value="上传">
+                    <span class="error">上传图片时，需要保证与前台的尺寸一致</span>
+                </div>
+            </div>
+            <div class="control-group">
+                <label class="control-label" >选项1</label>
+                <div class="controls">
+                    <input type="text" class="input-xlarge"  name="select1" value='@form("select1").value' placeholder="select1" required="required">
+                </div>
+            </div>
+            <div class="control-group">
+                <label class="control-label" >选项1的值</label>
+                <div class="controls">
+                    <input type="number" class="input-xlarge"  name="value1" value='@form("value1").value' placeholder="value1" required="required">
+                </div>
+            </div>
+
+            <div class="control-group">
+                <label class="control-label" >选项2</label>
+                <div class="controls">
+                    <input type="text" class="input-xlarge"  name="select2" value='@form("select2").value' placeholder="select2" required="required">
+                </div>
+            </div>
+            <div class="control-group">
+                <label class="control-label" >选项2的值</label>
+                <div class="controls">
+                    <input type="number" class="input-xlarge"  name="value2" value='@form("value2").value' placeholder="value2" required="required">
+            </div>
+            </div>
+
+            <div class="control-group">
+                <label class="control-label" >选项3</label>
+                <div class="controls">
+                    <input type="text" class="input-xlarge"  name="select3" value='@form("select3").value' placeholder="select3" required="required">
+                </div>
+            </div>
+            <div class="control-group">
+                <label class="control-label" >选项3的值</label>
+                <div class="controls">
+                    <input type="number" class="input-xlarge"  name="value3" value='@form("value3").value' placeholder="value3" required="required">
+                </div>
+            </div>
+            <div class="control-group">
+                <label class="control-label" >选项4</label>
+                <div class="controls">
+                    <input type="text" class="input-xlarge"  name="select4" value='@form("select4").value' placeholder="select4">
+                </div>
+            </div>
+            <div class="control-group">
+                <label class="control-label" >选项4的值</label>
+                <div class="controls">
+                    <input type="number" class="input-xlarge"  name="value4" value='@form("value4").value' placeholder="value4">
+                </div>
+            </div>
+            <div class="control-group">
+                <label class="control-label" >选项5</label>
+                <div class="controls">
+                    <input type="text" class="input-xlarge"  name="select3" value='@form("select5").value' placeholder="select5" >
+                </div>
+            </div>
+            <div class="control-group">
+                <label class="control-label" >选项5的值</label>
+                <div class="controls">
+                    <input type="number" class="input-xlarge"  name="value3" value='@form("value5").value' placeholder="value5">
+                </div>
+            </div>
             <div class="control-group">
                 <div class="controls">
 
                     <input type="submit" class="btn" value="保存"/>
                 </div>
             </div>
+
         </form>
 
 
@@ -43,36 +155,23 @@
 
 
 <script type="text/javascript">
-            $(function(){
-                $("#J_cid").change(function(){
-                  var cid =$(this).val()
 
-if(cid ==""){
-       $("#J_groupId").html(" ")
-    }else{
-    $.ajax({
-    url:"/admin/tags/getSimpleGroups?cid="+cid,
-    type:'get',
-    dataType:'html',
-    success:function(data){
-    $("#J_groupId").html(data)
-    }
-    })
-    }
+    $(function(){
+        $("#picUpload").uploadify({
+            'fileObjName' : 'fileData',
+            'multi'    : false,
+            'swf'         : '/assets/admin/js/uploadify/uploadify.swf',
+            'uploader'    : '/ajaxImage',
+            'onUploadSuccess' : function(file, data, response) {
+                var obj = JSON && JSON.parse(data) || $.parseJSON(data)
+                var src =obj.src;
+                $("#picShow").attr("src",src)
+                $("#pic").val(src)
+            }
+        });
 
     })
-
-
-
-
-
-
-                $("#J_tagForm").submit(function(){
-                  var name=  $("#J_groupId").find("option:selected").text();
-                    $("#groupName").val(name)
-                })
-            })
-       </script>
+</script>
 
         }
 
