--- a/app/views/admin/votes/filterVotes.scala.html
+++ b/app/views/admin/votes/filterVotes.scala.html
@@ -1,4 +1,4 @@
-@(manager: models.admin.Manager, page: models.Page[models.vote.Vote])
+@(manager: models.admin.Manager,page:models.Page[models.vote.Vote],form: Form[controllers.admin.VoteFilterFormData])
 
 @views.html.admin.template(manager, "vote") {
 
@@ -29,26 +29,27 @@
                     </div>
                     <div class="widget-content nopadding">
                         <form class=" form-horizontal" id="J_filterForm" method="get" action="@controllers.admin.routes.Votes.filter">
-                            <input type="hidden" name="currentPage" id="J_currentPage" value="1">
+                            <input type="hidden" name="currentPage" id="J_currentPage" value='@form("currentPage").value'>
                             <div class="error-row">
                                 <p class="error"></p>
                             </div>
+
 
 
                             <div class="control-group">
                                 <label class="control-label" >状态</label>
                                 <div class="controls">
                                     <div class="radio">
-                                        <input type="radio" name="validState" value=""> 所有
+                                        <input type="radio" name="validState" value='' @if(form("validState").value.isEmpty){ checked="true" }> 所有
                                     </div>
                                     <div class="radio">
-                                        <input type="radio"  name="validState" value="0">未开始
+                                        <input type="radio"  name="validState" value="0" @if(form("validState").value.getOrElse("none")=="0"){ checked="true" }> 未开始
                                     </div>
                                     <div class="radio">
-                                        <input type="radio" name="validState" value="1"> 正在进行
+                                        <input type="radio" name="validState" value="1" @if(form("validState").value.getOrElse("none")=="1"){ checked="true" }> 进行中
                                     </div>
                                     <div class="radio">
-                                        <input type="radio" name="validState" value="2"> 已过期
+                                        <input type="radio" name="validState" value="1" @if(form("validState").value.getOrElse("none")=="2"){ checked="true" }> 已结束
                                     </div>
                                 </div>
                             </div>
@@ -57,8 +58,8 @@
                             <div class="control-group">
                                 <label class="control-label" >创建时间：</label>
                                 <div class="controls">
-                                    From：<input type="date" name="startDate" class="date" value="">
-                                    to：<input type="date" name="endDate" class="date" value="">
+                                    From：<input type="date" name="startDate" class="date" value='@form("startDate").value'>
+                                    to：<input type="date" name="endDate" class="date" value='@form("endDate").value'>
                                 </div>
                             </div>
 
