adjust some json

--- a/app/views/ugc/api/gotoTaobao.scala.html
+++ b/app/views/ugc/api/gotoTaobao.scala.html
@@ -89,7 +89,7 @@
             success: function(data){
                if(data.code=="100"){
                 //  alert(sellUrl)
-                window.location = sellUrl;
+            //    window.location = sellUrl;
                }
             },
             error:function(){
@@ -97,7 +97,7 @@
             }
         });
 
-      window.location = sellUrl;
+  window.location = sellUrl;
     }
 
 
