--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -9,8 +9,8 @@
     <meta name="keywords" content=@keywords>
     <meta name="description" content=@description>
     <link rel="shortcut icon" type="image/png" href="/favicon.ico">
-    <link rel="stylesheet" href="/assets/css/global/global.css?v=2013040427">
-    <link rel="stylesheet" href="@css?v=2013040427">
+    <link rel="stylesheet" href="/assets/css/global/global.css?v=2013050401>
+    <link rel="stylesheet" href="@css?v=2013050401">
 </head>
 <body id="J_Page">
 
