--- a/app/views/infos/rebate.scala.html
+++ b/app/views/infos/rebate.scala.html
@@ -6,10 +6,10 @@ title =  "关于我们_食美特，爱美食爱生活"
 
 <div class="container">
     <div class="common">
-        <h2>关于食豆</h2>
+        <h2>返利&nbsp;•&nbsp;搜索&nbsp;•&nbsp;教程</h2>
         <div>
 
-
+todo           t
 
 
         </div>
