--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -28,7 +28,7 @@
             </div>
             <div class="hd-right">
                 <div class="gm-third-login">
-                    <a href="/rebate" data-type="third" class="third-login" target="_blank">返利&nbsp;•&nbsp;搜索&nbsp;•&nbsp;教程</a>
+                    <a href="/rebate" target="_blank">返利&nbsp;•&nbsp;搜索&nbsp;•&nbsp;教程</a>
 
                 </div>
                 <div class="search" id="search">
@@ -148,10 +148,10 @@
                             <dd><a href="/forum/view/1" target="_blank">提建议</a></dd>
                         </dl>
                         <dl class="service">
-                            <dt>服务支持</dt>
-                            <dd>QQ客服：1469909930</dd>
-                            <dd>QQ群：1469909930</dd>
-                            <dd>阿里旺旺：1469909930</dd>
+                            <dt>服务支持<span>（8:30-23:00,创业伤不起啊）</span></dt>
+                            <dd>QQ客服：<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=1469909930&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:1469909930:51" alt="食美特" title="食美特"/></a></dd>
+                            <dd>QQ群：<a target="_blank" href="http://wp.qq.com/wpa/qunwpa?idkey=d59eb043ea34fb5077312bd87e71ef5840dc6134951ac64d533dbd2659348e1b"><img border="0" src="http://pub.idqqimg.com/wpa/images/group.png" alt="食美特" title="食美特"></a></dd>
+                            <dd>阿里旺旺：<a target="_blank" href="http://amos.alicdn.com/msg.aw?v=2&uid=zuosanshao&site=cntaobao&s=1&charset=utf-8" ><img border="0" src="http://amos.alicdn.com/online.aw?v=2&uid=zuosanshao&site=cntaobao&s=1&charset=utf-8" alt="欢迎骚扰哦" /></a></dd>
                         </dl>
                     </div>
 
@@ -167,9 +167,9 @@
                     <h4 class="friend-links-tit">友情链接：</h4>
                         <div class="friend-links-item">
 
-                                <a href="" target="_blank"></a>
-
-                                <a href="/friends" target="_blank">更多&gt;&gt;</a>
+                            <a href="http://s.click.taobao.com/t_9?p=mm_32611004_0_0&l=http%3A%2F%2Fwww.tmall.com" target="_blank">天猫商城</a>
+                            <a href="http://s.click.taobao.com/t?e=zGU34CA7K%2BPkqB05%2Bm7rfGGjlY60oHcc7bkKOQifpt7KnkOYiFRC9aUtxO8SMBwBvLiDOzgTrN%2FtWL2PVKVmGF2V03YJrGxUBtYoGeQhoi%2FdEf37o%2BhUOWOOccDxVaJiTj98yToL%2Fuo5Inz977jBBNZNew0A3uvW0OzbVodnYOgZlbYNDaV5tUdjmLVt2vVe8WQk41TXUpBH" target="_blank">天猫美食</a>
+                            <!--    <a href="/friends" target="_blank">更多&gt;&gt;</a>-->
 
                         </div>
                 </div>
