--- a/app/views/pages/index.scala.html
+++ b/app/views/pages/index.scala.html
@@ -424,11 +424,11 @@ nav="index"
         @for((advert,i)<- meishiBrands.view.zipWithIndex) {
         @if(((i+1)%9==0)){
         <li class="last-item">
-            <a  href="@advert.link" title="@advert.title" target="_blank"><img src="@advert.pic" alt="@advert.title" width="100px" height="60px"></a>
+            <a  href="@advert.link" title="@advert.title" target="_blank"><img src="@advert.pic" alt="@advert.title" width="100" height="60"></a>
         </li>
         }else {
         <li>
-            <a  href="@advert.link" title="@advert.title" target="_blank"><img src="@advert.pic" alt="@advert.title" width="100px" height="60px"></a>
+            <a  href="@advert.link" title="@advert.title" target="_blank"><img src="@advert.pic" alt="@advert.title" width="100" height="60"></a>
         </li>
         }
         }
@@ -438,11 +438,11 @@ nav="index"
         @for((advert,i)<- teseBrands.view.zipWithIndex) {
         @if(((i+1)%9==0)){
         <li class="last-item">
-            <a  href="@advert.link" title="@advert.title" target="_blank"><img src="/assets/ui/blank.gif" data-original="@advert.pic" alt="@advert.title" width="100px" height="60px"></a>
+            <a  href="@advert.link" title="@advert.title" target="_blank"><img src="@advert.pic" alt="@advert.title" width="100" height="60"></a>
         </li>
         }else {
         <li>
-            <a  href="@advert.link" title="@advert.title" target="_blank"><img src="/assets/ui/blank.gif" data-original="@advert.pic" alt="@advert.title" width="100px" height="60px"></a>
+            <a  href="@advert.link" title="@advert.title" target="_blank"><img src="@advert.pic" alt="@advert.title" width="100" height="60"></a>
         </li>
         }
         }
