adjust ie6 css bug

--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -27,9 +27,8 @@
 
             </div>
             <div class="hd-right">
-                <div class="gm-third-login">
+                <div class="aboutRebate">
                     <a href="/rebate" target="_blank">返利&nbsp;•&nbsp;搜索&nbsp;•&nbsp;教程</a>
-
                 </div>
                 <div class="search" id="search">
                     <form action="/search" method="get">
@@ -119,7 +118,7 @@
 
     </div>
 
-
+  <div class="clear"></div>
     <div id="footer">
 
         <div class="footer-inner">
