--- a/public/assets/css/global/global.css
+++ b/public/assets/css/global/global.css
@@ -2163,14 +2163,12 @@ body .redactor_toolbar li a.redactor_btn_alignment	 		{ background-position: -62
 }
 .header .hd-left {
     float: left;
-    display: inline-block;
     width: 235px;
     margin-top: 10px;
 }
 .header .hd-right{
     float: right;
-/*    width: 600px;*/
-    display: inline-block;
+   width: 560px;
     margin-top:20px;
 }
 #header .logo{
@@ -2255,15 +2253,12 @@ body .redactor_toolbar li a.redactor_btn_alignment	 		{ background-position: -62
     background-position: 0 -24px
 }
 
-.header  .gm-third-login {
+.header  .aboutRebate {
     float: right;
     margin-left: 30px
 }
 
-.header  .gm-third-login a {
-    display: block;
-    float: right;
-    width: 120px;
+.header  .aboutRebate a {
     height: 30px;
     font-size: 14px;
     font-weight: bolder;
@@ -2283,12 +2278,16 @@ body .redactor_toolbar li a.redactor_btn_alignment	 		{ background-position: -62
 */
 #top{
     width:100%;
+    z-index:9999;
+    position: relative;
 }
 #nav{
     height: 40px;
     margin-bottom: 20px;
     background-color: #fff;
     border-bottom: 2px solid #666;
+    position: relative;
+
 }
 
 .fixed { z-index:9990;position:fixed;_position:absolute;top:0;left:0; }
@@ -2327,19 +2326,104 @@ body .redactor_toolbar li a.redactor_btn_alignment	 		{ background-position: -62
 }
 
 /* channel end */
-#nav a.btn-checkIn { display:block;margin:8px 0 0 5px;height:24px;overflow:hidden;line-height:24px;padding:0 12px 0 26px;color:#fff;background:#92b03b url(images/checkIn-status.png) 07px 2px no-repeat;_background:#92b03b url(images/checkIn-status-ie6.png) 07px 2px no-repeat; }
-#nav a.btn-checkIn:hover {text-decoration:none;background:#92b03b url(images/checkIn-status.png) 07px -23px no-repeat;transition:bottom 0.3s;-webkit-transition:bottom 0.3s;-moz-transition:bottom 0.3s;-o-transition:bottom 0.3s;_background:#92b03b url(images/checkIn-status-ie6.png) 07px -23px no-repeat; }
-#nav a.checked {color:#999;display:block;margin:8px 0 0 5px;height:24px;overflow:hidden;line-height:24px;padding:0 12px 0 26px;text-decoration:none;background:#fff url(images/checkIn-status.png) 07px -54px no-repeat;_background:#92b03b url(images/checkIn-status-ie6.png) 07px -54px no-repeat; }
-#nav a.checked:hover{background:#fff url(images/checkIn-status.png) 07px -54px no-repeat;_background:#92b03b url(images/checkIn-status-ie6.png) 7px -54px no-repeat; }
-#checkin_intro{width:130px;line-height:20px;color:#666;padding:10px;position:absolute;z-index:9998;background:#FFF;top:38px;right:0;border:1px solid #e4e4e4;border-top:none}
-#checkin_intro b{color:#F32A6B;}
-#checkin_intro  img{padding:5px 0;}
-#checkin_intro p{color:#999;line-height:18px;border-top:1px solid #f3f3f3;padding-top:5px;margin-top:5px;}
-#checkin_intro p a{color:#5AD;text-decoration: none;}
-#checkin_intro p a:hover{color:#5AD;text-decoration:underline;}
-#checkin_intro .checkin_on{color:#fff;background-color:#88b735;height:18px;line-height:18px;}
-#checkin_intro .checkin_off{color:#333;background-color:#dedede;height:18px;line-height:18px;}
-#checkin_intro .checkin_days{color:#9dc62c;font-size:30px;}
+#nav a.btn-checkIn {
+    display: block;
+    margin: 8px 0 0 5px;
+    height: 24px;
+    overflow: hidden;
+    line-height: 24px;
+    padding: 0 12px 0 26px;
+    color: #fff;
+    background: #92b03b url(images/checkIn-status.png) 07px 2px no-repeat;
+    _background: #92b03b url(images/checkIn-status-ie6.png) 07px 2px no-repeat;
+}
+
+#nav a.btn-checkIn:hover {
+    text-decoration: none;
+    background: #92b03b url(images/checkIn-status.png) 07px -23px no-repeat;
+    transition: bottom 0.3s;
+    -webkit-transition: bottom 0.3s;
+    -moz-transition: bottom 0.3s;
+    -o-transition: bottom 0.3s;
+    _background: #92b03b url(images/checkIn-status-ie6.png) 07px -23px no-repeat;
+}
+
+#nav a.checked {
+    color: #999;
+    display: block;
+    margin: 8px 0 0 5px;
+    height: 24px;
+    overflow: hidden;
+    line-height: 24px;
+    padding: 0 12px 0 26px;
+    text-decoration: none;
+    background: #fff url(images/checkIn-status.png) 07px -54px no-repeat;
+    _background: #fff url(images/checkIn-status-ie6.png) 07px -54px no-repeat;
+}
+
+#nav a.checked:hover {
+    background: #fff url(images/checkIn-status.png) 07px -54px no-repeat;
+    _background: #fff url(images/checkIn-status-ie6.png) 7px -54px no-repeat;
+}
+
+#checkin_intro {
+    width: 130px;
+    line-height: 20px;
+    color: #666;
+    padding: 10px;
+    position: absolute;
+    z-index: 9998;
+    background: #FFF;
+    top: 38px;
+    right: 0;
+    border: 1px solid #e4e4e4;
+    border-top: none
+}
+
+#checkin_intro b {
+    color: #F32A6B;
+}
+
+#checkin_intro  img {
+    padding: 5px 0;
+}
+
+#checkin_intro p {
+    color: #999;
+    line-height: 18px;
+    border-top: 1px solid #f3f3f3;
+    padding-top: 5px;
+    margin-top: 5px;
+}
+
+#checkin_intro p a {
+    color: #5AD;
+    text-decoration: none;
+}
+
+#checkin_intro p a:hover {
+    color: #5AD;
+    text-decoration: underline;
+}
+
+#checkin_intro .checkin_on {
+    color: #fff;
+    background-color: #88b735;
+    height: 18px;
+    line-height: 18px;
+}
+
+#checkin_intro .checkin_off {
+    color: #333;
+    background-color: #dedede;
+    height: 18px;
+    line-height: 18px;
+}
+
+#checkin_intro .checkin_days {
+    color: #9dc62c;
+    font-size: 30px;
+}
 /* 签到  end*/
 
 
